--- a/presentations/pres_3/pres_3.Rnw
+++ b/presentations/pres_3/pres_3.Rnw
@@ -123,12 +123,10 @@ Sys.setenv(LANG = "en")
 	
 	\begin{itemize}[<+- | alert@+>]
 		\item Whenever something happens in R, may it be the computation of a value, an assignment, deletion of a variable, plotting graphics, etc., there is a function called. No exception.
-		\item Objects and functions are not mutually exclusive. Indeed, functions are objects as well (as they exist) and can be passed around like any other object. We will see in later presentations why this is useful.
+		\item Objects and functions are not mutually exclusive. Indeed, functions are objects as well (as they exist) and can be passed around like any other object. This is not a matter of course and we will see in later presentations (functional programming) why this is useful.
 	\end{itemize}
-	
-	\pause
 
-	Given the central role of functions, it's worth studying them in some detail.
+	Given the central role of functions it's worth studying them in some detail.
 
 \end{frame}
 
@@ -198,7 +196,7 @@ Sys.setenv(LANG = "en")
 	
 	\begin{itemize}
 		\item In the first case, the function is called, which produces an error because there is no parameter to calculate the mean from.
-		\item In the second case, the object stored in \texttt{mean} is return, i.e. the function object.
+		\item In the second case, the object stored in \texttt{mean} is returned, i.e. the function object. It's like writing the name of a variable holding some numerical values. In that case you also get back what the variable holds, i.e. the numerical values.
 	\end{itemize}
 
 \end{frame}
@@ -229,7 +227,7 @@ Sys.setenv(LANG = "en")
 	b
 	@
 	
-	\texttt{a} holds the result of the function call whereas \texttt{b} holds the function object. Thus, \texttt{b} is now a different name for the same function object that is stored in \texttt{mean}.
+	\texttt{a} holds the result of the function call (and only the result; there is no information stored in \texttt{a} how this value was calculated) whereas \texttt{b} holds the function object. Thus, \texttt{b} is now a different name for the same function object that is stored in \texttt{mean}.
 
 \end{frame}
 
@@ -242,7 +240,7 @@ Sys.setenv(LANG = "en")
 	The proof\dots
 
 	<<function_5>>=
-	b(c(1, 2, 3, 4, 5))
+	b(x = c(1, 2, 3, 4, 5))
 	@
 
 \end{frame}
@@ -265,6 +263,10 @@ Sys.setenv(LANG = "en")
 	\pause
 	
 	Some function arguments have default values. For instance, \texttt{na.rm} from \texttt{mean} is by default set to \texttt{FALSE}. \texttt{x} does not have a default value (wouldn't make any sense\dots ).
+	
+	<<function_6a>>=
+	mean(x = a)
+	@
 
 \end{frame}
 
@@ -424,7 +426,7 @@ Sys.setenv(LANG = "en")
 	
 	\begin{itemize}[<+- | alert@+>]
 		\item The functions usually have common names like \texttt{mean}, \texttt{median}, \texttt{strsplit}, etc.
-		\item Functions usually take arguments in the order you would expect them.
+		\item Functions usually take arguments in the order you would expect them. The first argument of \texttt{mean} is of course the vector of which you'd like to know the mean.
 		\item Arguments that actually do the same in different functions have the same name. For instance, \texttt{mean}, \texttt{median}, \texttt{var} all have an argument \texttt{na.rm} that removes any missing values prior to any calculations.
 		\item If you use an IDE you usually only need to remember the first letters as the IDE will auto-complete your input.
 		\item Google is a very good source for help but be cautious. Not every answer you find on the internet is a good one (even though it technically works).
